--- a/codigo-fonte/style.css
+++ b/codigo-fonte/style.css
@@ -101,3 +101,15 @@ background-color: cornflowerblue;
 .side-bar .menu  .pdv{
     background-color: cornflowerblue;
 }
+
+.side-bar .menu  .home{
+    background-color: cornflowerblue;
+}
+
+.side-bar .menu  .user{
+    background-color: cornflowerblue;
+}
+
+.side-bar .menu  .relatorio{
+    background-color: cornflowerblue;
+}
