--- a/codigo-fonte/style.css
+++ b/codigo-fonte/style.css
@@ -10,12 +10,13 @@
 body {
     background-color: rgb(226, 226, 226);
     min-height: 100vh;
+    margin-right: 10px;
 }
   
 .side-bar{
     width: 80px;
     height: 100vh;
-    padding: 10px 0 10px;
+    padding: 0px 0 10px;
     background-color:rgb(45, 45, 45);
     box-shadow: 5px 0 0  cornflowerblue;
     position: fixed;
@@ -82,8 +83,9 @@ body {
 }
 
 h1 {
-    margin-left: 330px;
-    position: relative;
+    font-size: 20px;
+    margin-left: 40%;
+    color: #fff;
 }
 
 .side-bar .menu .item .caixa{
@@ -112,4 +114,29 @@ background-color: cornflowerblue;
 
 .side-bar .menu  .relatorio{
     background-color: cornflowerblue;
+}
+
+.corpo{
+    transition: .4s;
+    width: 100%;
+    height: 100%;
+    margin-top: 5px;
+    position: fixed;
+    display: flex;
+    margin-left: 330px;
+    padding: 10px 10px 10px 10px;
+    background-color: aquamarine;
+    
+}
+
+.cabecalho{
+    transition: .4s;
+    width: 100%;
+    height: 100%;
+    margin-left: 85px;
+    position:static;
+    display: flex;
+    padding: 10px 10px 10px 10px;
+    background-color:rgb(45, 45, 45);
+    box-shadow: 0 5px 0  cornflowerblue;
 }
