--- a/codigo-fonte/style.css
+++ b/codigo-fonte/style.css
@@ -140,3 +140,72 @@ background-color: cornflowerblue;
     background-color:rgb(45, 45, 45);
     box-shadow: 0 5px 0  cornflowerblue;
 }
+
+/* Estilo da tela de Login */ 
+
+.body-login{
+    background-image: linear-gradient(to right, rgb(185, 210, 224), rgb(82, 137, 238));
+}
+
+.box{
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background-color: rgba(0, 0, 0, 0.6);
+    padding: 15px;
+    border-radius: 15px;
+    width: 20%;
+}
+fieldset{
+    border: 3px solid cornflowerblue;
+    padding: 15px;
+}
+legend{
+    border: 1px solid cornflowerblue;
+    padding: 19px;
+    text-align: center;
+    background-color: cornflowerblue;
+    border-radius: 8px;
+}
+.inputBox{
+    position: relative;
+        }
+.inputUser{
+    background: none;
+    border: none;
+    border-bottom: 1px solid white;
+    outline: none;
+    color: white;
+    font-size: 15px;
+    width: 100%;
+    letter-spacing: 2px;
+}
+.labelInput{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    pointer-events: none;
+    transition: .5s;
+}
+.inputUser:focus ~ .labelInput,
+.inputUser:valid ~ .labelInput{
+    top: -20px;
+    font-size: 12px;
+    color: cornflowerblue;
+}
+
+#submit{
+    background-image: linear-gradient(to right,rgb(76, 145, 225), rgb(30, 20, 220));
+    width: 100%;
+    border: none;
+    padding: 15px;
+    color: white;
+    font-size: 15px;
+    cursor: pointer;
+    border-radius: 10px;
+}
+#submit:hover{
+    background-image: linear-gradient(to right,rgb(31, 115, 212), rgb(19, 42, 195));
+}
