--- a/codigo-fonte/pdv.css
+++ b/codigo-fonte/pdv.css
@@ -1,7 +1,7 @@
 
 .boxpdv{
     color: rgb(0, 0, 0);
-    display: block;
+    display: flex;
     top: 10px;
     left: 10px;
     padding: 10px;
@@ -13,31 +13,28 @@
 }
 
 
-
 .inputBox-pdv{
     position: relative;
         }
 .inputUser-pdv{
+    border-color: rgb(0, 0, 0);
     background: none;
+    border-radius: 10px;
     outline: none;
-    height: 40px;
+    height: 35px;
     color: rgb(0, 0, 0);
-    font-size: 20px;
+    font-size: 15px;
     width: 100%;
-    letter-spacing: 2px;
-}
+    letter-spacing: 1px;    
+    ;}
+
+
 .labelInput-pdv{
     
     top: 0px;
     left: 0px;
     pointer-events: none;
     transition: .5s;
-}
-.inputUser-pdv:focus ~ .labelInput-pdv,
-.inputUser-pdv:valid ~ .labelInput-pdv{
-    top: -22px;
-    font-size: 20px;
-    color: rgb(0, 0, 0);
 }
 
 #submit-pdv{
@@ -53,4 +50,19 @@
 #submit-pdv:hover{
     
     background-image: linear-gradient(to right,rgb(31, 115, 212), rgb(19, 42, 195));
+}
+
+.divcorpo {
+
+    display: inline-block;
+}
+
+.tabelapdv {
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-bottom: 60px;
+    width: 122vh;
+    background-color: aquamarine;
+    display: flex;
+    
 }
