--- a/codigo-fonte/config.css
+++ b/codigo-fonte/config.css
@@ -1,3 +1,14 @@
+.corpoconfig{
+    margin-left: 330px ;
+    margin-top: 10px;
+    height: 700px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    position: static;
+    padding: 20px;
+    overflow: hidden ;
+
+}
 
 .boxpdv{
     color: rgb(0, 0, 0);
@@ -6,7 +17,7 @@
     left: 10px;
     padding: 10px;
     border-radius: 15px;
-    width: 250px;
+    width: 800px;
 }
 .fieldsetpdv{
     padding: 15px;
@@ -19,6 +30,7 @@
 .inputUser-pdv{
     border-color: rgb(0, 0, 0);
     background: none;
+    display: block;
     border-radius: 10px;
     outline: none;
     height: 35px;
@@ -39,13 +51,15 @@
 
 #submit-pdv{
     background-image: linear-gradient(to right,rgb(76, 145, 225), rgb(30, 20, 220));
-    width: 100%;
+    width: 200px;
+    position: relative;
     border: none;
     padding: 15px;
     color: white;
     font-size: 15px;
     cursor: pointer;
     border-radius: 10px;
+    margin-left: 200px;
 }
 #submit-pdv:hover{
     
@@ -57,10 +71,10 @@
     display: inline-block;
 }
 
-.tabelapdv {
-    margin-top: 10px;
-    margin-right: 10px;
-    margin-bottom: 60px;
-    width: 100%;
-    background-color: aquamarine;
+#token, #url{
+    width: 600px;
 }
+#app{
+    width: 200px;
+}
+
