--- a/codigo-fonte/users.css
+++ b/codigo-fonte/users.css
@@ -1,24 +1,30 @@
-
-.boxpdv{
-    color: rgb(0, 0, 0);
+.corpoconfig{
+    margin-left: 330px ;
+    margin-top: 10px;
+    height: 800px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    padding: 30px;
+    overflow: hidden ;
     display: flex;
-    top: 10px;
-    left: 10px;
-    padding: 10px;
-    border-radius: 15px;
-    width: 250px;
+    width: 1000px;
+
 }
+
 .fieldsetpdv{
     padding: 15px;
+    width: 350px;
+    margin-right: 90px;
 }
-
 
 .inputBox-pdv{
     position: relative;
-        }
+ }
+
 .inputUser-pdv{
     border-color: rgb(0, 0, 0);
     background: none;
+    display: block;
     border-radius: 10px;
     outline: none;
     height: 35px;
@@ -46,21 +52,41 @@
     font-size: 15px;
     cursor: pointer;
     border-radius: 10px;
+    transform: translate(-50%,-50%);
+    margin-left: 50%;
+
 }
 #submit-pdv:hover{
-    
     background-image: linear-gradient(to right,rgb(31, 115, 212), rgb(19, 42, 195));
 }
 
 .divcorpo {
-
     display: inline-block;
 }
 
-.tabelapdv {
-    margin-top: 10px;
-    margin-right: 10px;
-    margin-bottom: 60px;
-    width: 100%;
-    background-color: aquamarine;
+.colunauser{
+    margin-left: 80px;
+    width: 350px;
+    height: 80px;
+    border: 4px solid cornflowerblue;
+}
+
+table, th, td {
+    border-bottom: 1px solid black;
+}
+    
+table {
+    border-collapse: collapse;
+    margin: auto;
+}
+    
+th, td{
+    padding: 10px;
+    text-align: center;
+    width: 120px;
+}
+
+#botaoedit{
+    color: cornflowerblue;
+    cursor: pointer;
 }
