--- a/codigo-fonte/style.css
+++ b/codigo-fonte/style.css
@@ -87,8 +87,9 @@ body {
 
 h1 {
     font-size: 20px;
-    margin-left: 40%;
+    margin-left: 50%;
     color: #fff;
+    transform: translate(-50%);
 }
 
 .side-bar .menu .item .caixa{
