--- a/codigo-fonte/style.css
+++ b/codigo-fonte/style.css
@@ -84,11 +84,6 @@ body {
     transform: rotate(90deg);
 }
 
-h1 {
-    font-size: 20px;
-    margin-left: 40%;
-    color: #fff;
-}
 
 .side-bar .menu .item .caixa{
 background-color: cornflowerblue;
@@ -123,7 +118,7 @@ background-color: cornflowerblue;
     width: 100%;
     height: 100%;
     margin-top: 5px;
-    position: fixed;
+    position: static;
     display: flex;
     margin-left: 330px;
     padding: 5px 5px 5px 5px;
@@ -140,6 +135,13 @@ background-color: cornflowerblue;
     padding: 10px 10px 10px 10px;
     background-color:rgb(45, 45, 45);
     box-shadow: 0 5px 0  cornflowerblue;
+}
+
+h1 {
+    font-size: 20px;
+    margin-left: 50%;
+    color: #fff;
+    transform: translate(-50%);
 }
 
 /* Estilo da tela de Login */ 
