--- a/codigo-fonte/css/pdv.css
+++ b/codigo-fonte/css/pdv.css
@@ -38,17 +38,24 @@
     transition: .5s;
 }
 
-#submit-pdv{
+#consultaCliente{
+    display: none;
+}
+
+#submit-pdv,
+#consultaCliente{
     background-image: linear-gradient(to right,rgb(76, 145, 225), rgb(30, 20, 220));
     width: 100%;
     border: none;
     padding: 15px;
+    margin-bottom: 20px;
     color: white;
     font-size: 15px;
     cursor: pointer;
     border-radius: 10px;
 }
-#submit-pdv:hover{
+#submit-pdv:hover,
+#consultaCliente:hover{
     
     background-image: linear-gradient(to right,rgb(31, 115, 212), rgb(19, 42, 195));
     font-size: 20px;
@@ -123,6 +130,5 @@ tr{
 
     margin-right: 10px;
     margin-bottom: 60px;
-    width: 100%;
     background-color: aquamarine;
 }
