--- a/codigo-fonte/css/config.css
+++ b/codigo-fonte/css/config.css
@@ -7,6 +7,7 @@
     position: static;
     padding: 20px;
     overflow: hidden ;
+    width: 1200px;
 
 }
 
@@ -49,7 +50,7 @@
 }
 
 #submit-config{
-    background-image: linear-gradient(to right,rgb(76, 145, 225), rgb(30, 20, 220));
+    background-image: linear-gradient(to right, rgb(76, 145, 225), rgb(74, 65, 238));
     width: 200px;
     position: relative;
     border: none;
@@ -65,6 +66,11 @@
     background-image: linear-gradient(to right,rgb(31, 115, 212), rgb(19, 42, 195));
 }
 
+#submit-config:active{
+    font-size: 14px;
+    opacity: 0.5;
+}
+
 .divcorpo {
 
     display: inline-block;
@@ -75,5 +81,12 @@
 }
 #app{
     width: 200px;
+}
+
+.status{
+    float: right;
+    margin-right: 20%;
+    margin-top: 3%;
+    font-size: 18px;
 }
 
