--- a/codigo-fonte/css/style.css
+++ b/codigo-fonte/css/style.css
@@ -85,13 +85,6 @@ body {
     transform: rotate(90deg);
 }
 
-h1 {
-    font-size: 20px;
-    margin-left: 50%;
-    color: #fff;
-    transform: translate(-50%);
-}
-
 .side-bar .menu .item .caixa{
 background-color: cornflowerblue;
 }
@@ -133,7 +126,7 @@ background-color: cornflowerblue;
 }
 
 .cabecalho{
-    transition: .4s;
+    margin-top:0%;
     width: 100%;
     height: 100%;
     margin-left: 10px;
@@ -149,4 +142,18 @@ h1 {
     margin-left: 50%;
     color: #fff;
     transform: translate(-50%);
+}
+
+.tagusuario {
+    font-size: 15px;
+    margin-left: 80%;
+    position: absolute;
+    color: white;
+    display: flex ;
+}
+.tagusuario .bi{
+    display: flex ;
+    margin-right: 20px;
+    font-size: 25px;
+
 }
