--- a/codigo-fonte/css/estoque.css
+++ b/codigo-fonte/css/estoque.css
@@ -35,7 +35,7 @@ th {
         width: auto;
         border: none;
         padding: 15px;
-        margin-right: 670px;
+        margin-right: 55%;
         margin-bottom: 20px;
         color: white;
         font-size: 15px;
@@ -45,28 +45,7 @@ th {
 
 }
 
-.remover {
-    display: flex;
-    background-image: linear-gradient(to right,rgb(76, 145, 225), rgb(74, 65, 238));
-    width: auto;
-    border: none;
-    padding: 15px;
-
-    margin-bottom: 20px;
-    color: white;
-    font-size: 15px;
-    cursor: pointer;
-    border-radius: 10px;
-    float: right;
-
-}
-
-.remover:hover{
-    background-image: linear-gradient(to right,rgb(255, 0, 0), rgb(255, 0, 0));
-    color: black;
-}
-
-#botaoedit {
+#botaoedit, #botaodelete {
     color: cornflowerblue;
     cursor: pointer;
 }
