--- a/codigo-fonte/css/caixa-fechamento.css
+++ b/codigo-fonte/css/caixa-fechamento.css
@@ -2,18 +2,27 @@
     display: inline;
     padding: 10px;
 }
-
+.corpotable{
+    overflow-y: auto;
+    height: 400px;
+}
 .boxresultado{
     display: inline;
     padding: 10px;
     font-size: 20px;
 }
 
+.corpotable{
+    overflow-y: auto;
+    height: 400px;
+}
+
 .fieldsetcaixafecha{
     border-color: cornflowerblue;
     padding: 15px;
-    display: flex;
+    display: fixed;
     align-items: center;
+    text-align: center;
 }
 
 
